src/theme.css
/*!
  Original Authors:
    - crambaud, waterfall: https://github.com/crambaud/waterfall
    - andreasgrafen, cascade: https://github.com/andreasgrafen/cascade
    - migueravila, SimpleFox: https://github.com/migueravila/SimpleFox
*/

/* Light Theme Colors */
:root:not(:-moz-lwtheme) {
  --window-colour: #fafafc;
  --secondary-colour: #eaeaec;
  --inverted-colour: #1e2021;
}

:root {
  /* Dark Theme Colors */
  --window-colour: #1f2122;
  --secondary-colour: #141616;
  --inverted-colour: #fafafc;

  /* Containter Tab Colours */
  --uc-identity-color-blue: #7ed6df;
  --uc-identity-color-turquoise: #55e6c1;
  --uc-identity-color-green: #b8e994;
  --uc-identity-color-yellow: #f7d794;
  --uc-identity-color-orange: #f19066;
  --uc-identity-color-red: #fc5c65;
  --uc-identity-color-pink: #f78fb3;
  --uc-identity-color-purple: #786fa6;

  /* URL colour in URL bar suggestions */
  --urlbar-popup-url-color: var(--uc-identity-color-purple) !important;

  /* global border radius */
  --uc-border-radius: 5px;

  /* dynamic url bar width settings */
  --uc-urlbar-width: clamp(250px, 50vw, 600px);

  /* dynamic tab width settings */
  --uc-active-tab-width: clamp(50px, 18vw, 220px);
  --uc-inactive-tab-width: 0px;

  /* if active always shows the tab close button */
  --show-tab-close-button: none; /* DEFAULT: -moz-inline-box; */

  /* if active only shows the tab close button on hover*/
  --show-tab-close-button-hover: -moz-inline-box; /* DEFAULT: -moz-inline-box; */
}

/*=============================================================================================*/

/*---+---+---+---+---+---+
| L | A | Y | O | U | T |
+---+---+---+---+---+---*/

/* No need to change anything below this comment.
* Just tweak it if you want to tweak the overall layout. c: */

:root {
  --uc-theme-colour: var(--window-colour);
  --uc-hover-colour: var(--secondary-colour);
  --uc-inverted-colour: var(--inverted-colour);

  --button-bgcolor: var(--uc-theme-colour) !important;
  --button-hover-bgcolor: var(--uc-hover-colour) !important;
  --button-active-bgcolor: var(--uc-hover-colour) !important;

  --toolbar-bgcolor: var(--uc-theme-colour) !important;
  --toolbarbutton-hover-background: var(--uc-hover-colour) !important;
  --toolbarbutton-active-background: var(--uc-hover-colour) !important;
  --toolbarbutton-border-radius: var(--uc-border-radius) !important;
  --lwt-toolbar-field-focus: var(--uc-theme-colour) !important;
  --toolbarbutton-icon-fill: var(--uc-inverted-colour) !important;
  --toolbar-field-focus-background-color: var(--secondary-colour) !important;
  --toolbar-field-color: var(--uc-inverted-colour) !important;
  --toolbar-field-focus-color: var(--uc-inverted-colour) !important;

  --tabs-border-color: var(--uc-theme-colour) !important;
  --tab-border-radius: var(--uc-border-radius) !important;
  --lwt-text-color: var(--uc-inverted-colour) !important;
  --lwt-tab-text: var(--uc-inverted-colour) !important;

  --lwt-sidebar-background-color: var(--uc-hover-colour) !important;
  --lwt-sidebar-text-color: var(--uc-inverted-colour) !important;

  --arrowpanel-border-color: var(--uc-theme-colour) !important;
  --arrowpanel-border-radius: var(--uc-border-radius) !important;
  --arrowpanel-background: var(--uc-theme-colour) !important;
  --arrowpanel-color: var(--inverted-colour) !important;

  --autocomplete-popup-highlight-background: var(
    --uc-inverted-colour
  ) !important;
  --autocomplete-popup-highlight-color: var(--uc-inverted-colour) !important;
  --autocomplete-popup-hover-background: var(--uc-inverted-colour) !important;

  --tab-block-margin: 1px !important;
  --urlbar-container-height: 44px;
}

window,
#main-window,
#toolbar-menubar,
#TabsToolbar,
#PersonalToolbar,
#navigator-toolbox,
#sidebar-box,
#nav-bar {
  border: none !important;
  box-shadow: none !important;
  background: var(--uc-theme-colour) !important;
}

/* remove 1px white line on top of browser */
#TabsToolbar {
  margin-top: -1px;
}

/* centers hamburger menu while on small browser */
.toolbarbutton-badge-stack {
  margin-top: 3px;
}

/* makes inactive tabs icons */
.tabbrowser-tab:not([pinned]) {
  min-width: initial !important;
}

/* fixes up bookmarks toolbar */
#PersonalToolbar {
  padding-inline: 3px !important;
  margin-top: -5px;
}

/* fixes bookmarks toolbar overlap */
#tabs-newtab-button,
#TabsToolbar #new-tab-button {
  position: relative;
}

/* remove "padding" left and right from tabs */
.titlebar-spacer {
  display: none !important;
}

/* remove gap after pinned tabs */
#tabbrowser-tabs[haspinnedtabs]:not([positionpinnedtabs])
  > #tabbrowser-arrowscrollbox
  > .tabbrowser-tab[first-visible-unpinned-tab] {
  margin-inline-start: 0 !important;
}

/* remove tab shadow */
.tabbrowser-tab > .tab-stack > .tab-background {
  box-shadow: none !important;
}

/* tab background */
.tabbrowser-tab > .tab-stack > .tab-background {
  background: var(--uc-theme-colour) !important;
}

/* active tab background */
.tabbrowser-tab[selected] > .tab-stack > .tab-background {
  background: var(--uc-hover-colour) !important;
}

/* tab close button options */
.tabbrowser-tab:not([pinned]) .tab-close-button {
  display: var(--show-tab-close-button) !important;
}
.tabbrowser-tab:not([pinned]):hover .tab-close-button {
  display: var(--show-tab-close-button-hover) !important;
}

/* adaptive tab width */
.tabbrowser-tab[selected][fadein]:not([pinned]) {
  max-width: var(--uc-active-tab-width) !important;
}
.tabbrowser-tab[fadein]:not([selected]):not([pinned]) {
  max-width: var(--uc-inactive-tab-width) !important;
}

/* container tabs indicator */
.tabbrowser-tab[usercontextid]
  > .tab-stack
  > .tab-background
  > .tab-context-line {
  margin: -1px var(--container-tabs-indicator-margin) 0
    var(--container-tabs-indicator-margin) !important;

  border-radius: var(--tab-border-radius) !important;
}

/* change the colours of the speaker icon on active tab to match tab colours */
.tabbrowser-tab[selected]
  .tab-icon-overlay:not([sharing], [crashed]):is([soundplaying], [muted], [activemedia-blocked]) {
  stroke: var(--uc-hover-colour) !important;
  background-color: var(--uc-hover-colour) !important;
}

.tab-icon-overlay:not([crashed])[soundplaying]:hover,
.tab-icon-overlay:not([crashed])[muted]:hover,
.tab-icon-overlay:not([crashed])[activemedia-blocked]:hover {
  color: currentColor !important;
  stroke: var(--uc-inverted-colour) !important;
  background-color: var(--uc-inverted-colour) !important;
  fill-opacity: 0.95 !important;
}

.tabbrowser-tab[selected] .tab-icon-overlay:not([crashed])[soundplaying]:hover,
.tabbrowser-tab[selected] .tab-icon-overlay:not([crashed])[muted]:hover,
.tabbrowser-tab[selected]
  .tab-icon-overlay:not([crashed])[activemedia-blocked]:hover {
  color: currentColor !important;
  stroke: var(--uc-inverted-colour) !important;
  background-color: var(--uc-inverted-colour) !important;
  fill-opacity: 0.95 !important;
}

/* speaker icon colour fix */
#TabsToolbar .tab-icon-overlay:not([crashed])[soundplaying],
#TabsToolbar .tab-icon-overlay:not([crashed])[muted],
#TabsToolbar .tab-icon-overlay:not([crashed])[activemedia-blocked] {
  color: var(--uc-inverted-colour) !important;
}

/* speaker icon colour fix on hover */
#TabsToolbar .tab-icon-overlay:not([crashed])[soundplaying]:hover,
#TabsToolbar .tab-icon-overlay:not([crashed])[muted]:hover,
#TabsToolbar .tab-icon-overlay:not([crashed])[activemedia-blocked]:hover {
  color: var(--uc-theme-colour) !important;
}

#urlbar[focused="true"] > #urlbar-background,
#urlbar:not([open]) > #urlbar-background {
  background: transparent !important;
}

#urlbar[open] > #urlbar-background {
  background: var(--uc-theme-colour) !important;
}

.urlbarView-row:hover > .urlbarView-row-inner,
.urlbarView-row[selected] > .urlbarView-row-inner {
  background: var(--uc-hover-colour) !important;
}

.searchbar-engine-one-off-item:not([selected]):hover {
  background-color: var(--uc-hover-colour) !important;
}

/* transition to oneline */
@media (min-width: 1000px) {
  /* move tabs bar over */
  #TabsToolbar {
    margin-left: var(--uc-urlbar-width) !important;
  }

  /* move entire nav bar  */
  #nav-bar {
    margin: calc((var(--urlbar-min-height) * -1) - 8px)
      calc(100vw - var(--uc-urlbar-width)) 0 0 !important;
  }

  /* centers url input box */
  #urlbar-input-container {
    margin-top: 1px;
  }

  /* centers hamburger menu while on single line */
  .toolbarbutton-badge-stack {
    margin-top: 3px;
  }
}

